Libraries update